[package]
name = "eip712_enc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-ethereum"
documentation = "https://docs.rs/eip-712"
readme = "README.md"
description = "eip-712 encoding"
keywords = ["eip-712", "eip712", "eip"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethabi = "18.0.0"
keccak-hash = "0.10.0"
ethereum-types = "0.14.1"
failure = "0.1"
itertools = "0.13.0"
lazy_static = "1.1"
regex = "1.0"
validator = "0.18.1"
validator_derive = "0.18.1"
lunarity-lexer = "0.2"
rustc-hex = "2.0"
indexmap = "2.2.6"
once_cell = "1.19.0"
